tests/baselines/reference/indexWithoutParamType.errors.txt
==== tests/cases/compiler/indexWithoutParamType.ts (1 errors) ====
    var y: { []; } // Error
             ~~
!!! error TS1096: An index signature must have exactly one parameter.